force-app/main/default/objects/Member__c/fields/Borrow_Count__c.field-meta.xml
<CustomField>
    <fullName>Borrow_Count__c</fullName>
    <label>Borrow Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>