force-app/main/default/objects/Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Member_Name__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Status__c</columns>
    <columns>Borrow_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>