force-app/main/default/objects/Member__c/listViews/My_Members.listView-meta.xml
<ListView>
    <fullName>My_Members</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Membership_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Borrow_Count__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Members</label>
</ListView>